# RHClaw

./: .gitignore  LICENSE  README.md  README.zh-CN.md
.github/workflows/: desktop-package.yml
RHClaw-Channel/: .gitignore  README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
RHClaw-Channel/src/: channel.ts  config-schema.ts  config.ts  env-token.ts  inbound.ts  openclaw-plugin-sdk.local.d.ts  outbound.ts  runtime.ts  server-client.ts  session-map.ts  status.ts  types.ts
RHClaw-Channel/test/: channel.startup.test.ts  config-schema.test.ts  config.test.ts  mappers.test.ts  server-client.test.ts  session-map.test.ts
RHClaw-Desktop/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
RHClaw-Desktop/scripts/: build-full-offline-materials.mjs  build-openclaw-bootstrap-assets.mjs  check-release-readiness.mjs  check-tauri-toolchain.mjs  collect-upgrade-evidence-macos.sh  collect-upgrade-evidence-windows.ps1  generate-release-bundle-extras.mjs  (+14 more)
RHClaw-Desktop/src-tauri/: Cargo.toml  tauri.conf.json
RHClaw-Desktop/src-tauri/capabilities/: main.json
RHClaw-Desktop/src-tauri/icons/: icon.icns
RHClaw-Desktop/src-tauri/skills/: .skills_store_lock.json
RHClaw-Desktop/src-tauri/skills/acp-router/: _meta.json
RHClaw-Desktop/src-tauri/skills/api-gateway/: SKILL.md  _meta.json
RHClaw-Desktop/src-tauri/skills/mbti/: _meta.json
RHClaw-Desktop/src-tauri/skills/prose/: _meta.json
RHClaw-Desktop/src-tauri/src/: desktop_trace.rs  main.rs  task_center.rs
docs/: RHClaw-Channel开源执行计划.md
(+32 files in other folders)
