[package]
name = "rhopenclaw-desktop"
version = "1.0.1"
edition = "2021"
description = "RHClaw Desktop Tauri shell"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = "0.4"
dirs = "5"
flate2 = "1"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-autostart = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
